<resources>
    <string name="app_name">MyParseEmailVerification</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">5t9fqG16FTsSaQs5qgevjfE788TPs6ZygMkQcAnj</string>
    <string name="back4app_client_key">wavv5pqLen8S7zFACsEuwosbijVtMFRMpY0wXj2o</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
</resources>